--- a/cf-approuter-nodejs/package.json
+++ b/cf-approuter-nodejs/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "cfboilerplate.router",
-  "description": "cfboilerplate.router",
+  "name": "cf-approuter-nodejs",
+  "description": "cf-approuter-nodejs",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@sap/approuter": "2.7.0",
-    "semver": "5.0.1"
+    "@sap/approuter": "2.7.0"
   },
   "engines": {
     "node": "6.x.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "startdev": "nodemon app.js",
-    "test": "mocha --recursive --check-leaks -r should"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
+    "start": "node app.js"
   }
 }
